removed the position:absolute styling from the #wrapper, but after removing overflow styling from body, the jumpy lagging issue came back. Along with this, the page is scrolling well past the content.

--- a/css/style.css
+++ b/css/style.css
@@ -13,25 +13,22 @@ html {
 body {
 	height: 100%;
 	width: 100%;
-	overflow-x: hidden;
 }
 
 #wrapper {
-	position: absolute;
 	left: 0;
 	width: 100%;
-	height: 100%;
 	display: flex;
 	flex-flow: column nowrap;
 	align-items: center;
 	justify-content: space-between;
 	transition: padding-right .3s linear;
 	padding-right: 14em; /*CHANGE TO 0 WHEN SWITCHING MEDIA QUERIES*/
+	overflow: hidden;
 }
 
 #main {
 	width: 100%;
-	height: auto;
 	display: block;
 }
 
@@ -47,7 +44,6 @@ body {
 
 .page-title {
 	display: flex;
-	position: relative;
 	top: 0;
 	left: 0;
 	align-items: center;
@@ -225,7 +221,6 @@ body {
 	top: 0;
 	left: 0;
 	display: block;
-	position: absolute;
 	background-color: #8af754;
 	border-radius: .15em;
 	height: 16%;
@@ -1124,7 +1119,6 @@ button#submitForm {
 footer {
 	width: 100%;
 	height: 3em;
-	position: relative;
 	bottom: 0;
 	left: 0;
 	padding: 2em 0;
